# opennccframe

./: 404.html  Introduction.html  getting-started.html  index.html  install.sh  ncc-elements.html  ncc-examples.html  readme.md  tutorials.html
assets/css/: 0.styles.09fb44de.css  0.styles.8cdaa659.css
assets/js/: 10.4ce920db.js  10.53bb63fa.js  10.566e5274.js  10.7429ab24.js  11.2b04efc1.js  11.2d2f1cd9.js  11.bc7a7c09.js  11.fd54156f.js  12.0a931481.js  12.b0ef625f.js  12.bce353b4.js  12.f67411b5.js  13.6c70fb49.js  13.762c6cb0.js  13.7cfa3d17.js  13.aae3ed60.js  14.03669176.js  14.b3d9996d.js  14.d271a1a2.js  15.2212f648.js  15.64f4b118.js  15.cc274247.js  16.1d7f0551.js  16.76e6f50f.js  16.9e598ef7.js  16.a773bb02.js  17.492439cf.js  17.843c9cf8.js  17.9d52f0e1.js  17.c3291375.js  18.1f2ad656.js  18.3d4a9ccc.js  18.605464b2.js  18.d25e17d4.js  19.2a4b0171.js  19.7162d8c2.js  19.75daeb79.js  19.8ac5e126.js  20.2c339a92.js  20.6f93685a.js  (+43 more)
debian/: changelog  control  copyright  opennccframe.install  readme.md  rules
docs/mainres/: frame.pptx  readme_cn.md
getting-started/: install-NCC-elements-on-nnstreamer.html  install-from-deb.html  install-from-repo.html  install-native-vpu-lib.html
getting-started/install-from-deb/: ubuntu.html
getting-started/install-from-repo/: install-native-vpu-lib.html  install-ncc-elements-into-nnstreamer.html
introduction/: introduction-native.html
native-api/: _fp16_convert_8h.html  _fp16_convert_8h_source.html  annotated.html  annotated_dup.js  bug.html  c_j_s_o_n_8h.html  c_j_s_o_n_8h__incl.dot  c_j_s_o_n_8h__incl.md5  c_j_s_o_n_8h_source.html  c_j_s_o_n__parser_8h.html  c_j_s_o_n__parser_8h__incl.dot  c_j_s_o_n__parser_8h__incl.md5  c_j_s_o_n__parser_8h_source.html  camera_ctrl_8h.html  camera_ctrl_8h.js  camera_ctrl_8h__dep__incl.dot  camera_ctrl_8h__dep__incl.md5  camera_ctrl_8h_source.html  classes.html  dir_000002_000001.html  dir_043bfe9c8d2a826f91137e6e36491a21.html  dir_043bfe9c8d2a826f91137e6e36491a21.js  dir_201227ef0b4ee359226c22bf7c993726.html  dir_201227ef0b4ee359226c22bf7c993726.js  dir_30a182a39eacd2173e3b112ddc0a0476.html  dir_30a182a39eacd2173e3b112ddc0a0476.js  dir_44d5d3861071bd4aae973fa5a38b5ae4.html  dir_46035fa3993040d7d1832145e3c51c9c.html  dir_4bbfcd7acd4649e3ae2863c7b186ceac.html  dir_4bbfcd7acd4649e3ae2863c7b186ceac.js  dir_5a863dce7d61124d41bdb8661f479286.html  dir_5eb33dbb5c128bfaba79d0efdd77aeda.html  dir_5eb33dbb5c128bfaba79d0efdd77aeda.js  dir_67e476916a250b563c3f3c210a39e976.html  dir_67e476916a250b563c3f3c210a39e976.js  dir_6b0b95710cb3a8326ac9829d33e0116f.html  dir_87da9a754c98629b142350329ff44e7d.html  dir_87da9a754c98629b142350329ff44e7d.js  dir_91427abbe7ff603689b62b78a621fc92.html  dir_97686f2352f9e87805108481ae388953.html  (+185 more)
native-api/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  (+96 more)
native_vpu_api/: 96-openncc.rules  OpenNCC_native.pc  OpenNCC_native.pc.in  readme.md
ncc-elements/: tensor-decoder.html  tensor-filter.html  tensor-schedule.html  tensor-source.html
ncc-examples/: example-native.html  example-nnstreamer.html
nnstreamer/: 0001-Filter-Decoder-Add-option-for-ncc-and-fix-bug-of-box.patch  meson.build  meson_options.txt  readme.md
nnstreamer/example/example_dual_model_parallel_ncc/: example_dual_model_parallel_ncc.py  readme.md
nnstreamer/example/example_face_dection_ncc/: example_face_dection_ncc.py  readme.md
nnstreamer/example/example_face_detection_ncc/: example_face_detection_ncc.py  readme.md
nnstreamer/example/example_pic_face_detection/: example_pic_face_detection_ncc.py  readme.md
nnstreamer/gst/: meson.build
nnstreamer/gst/tensor_filter/: meson.build
nnstreamer/gst/tensor_filter/tensor_filter_ncc/: meson.build  tensor_filter_ncc.cpp
nnstreamer/gst/tensor_source/: meson.build
nnstreamer/gst/tensor_source/tensor_src_ncc/: meson.build  readme.md  tensor_src_ncc.cpp  tensor_src_ncc.h
tutorials/: how-to-write-json-config.html
(+60 files in other folders)
